--- a/css/style.css
+++ b/css/style.css
@@ -1,37 +1,71 @@
+html {
+  background: #ececec;
+}
+
 body{
 	background-image: linear-gradient(to top right, #a8edea 0%, #fed6e3 100%);
+
+
 }
 
 #bgp{
  background-image: url('../Picture/Imageportfolio.jpg');
  background-repeat: no-repeat;
  background-size:contain;
-}
-.flex{
-  display: flex;
-  text-align: center;
-  justify-content : center;
-}
-
-#wel{
-  border-style:solid;
-  border-color: white;
-  border-width: 5px;
-  border-radius: 5px;
-  width:35%;
-  height: 25%;
-  top: 32.5%;
-  left: 32.5%;
-  position: absolute;
-  text-align: center;
-  background-color: rgba(0, 0, 0, 0.65);
+  font-family: 'Roboto', sans-serif;
+  width:100%;
+  height:100vh;
+  font-size:28px;
+  display:flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 .menuH1{
-	color: rgba(255,255,255,0.6);
-  	font-family: 'Raleway', sans-serif;
-	font-weight: 600;
-	text-transform: uppercase;
+  position: absolute;
+  padding: 2%;
+  background-color: rgba(0,0,0,0.6);
+  color: rgba(255,255,255,0.9);
+  font-family: 'Raleway', sans-serif;
+  font-weight: 600;
+  border: 4px solid rgba(255,255,255, 0.6);
+  border-radius: 4px
 }
+.intro{
+  display:flex;
+  flex-direction:row;
+  padding: 2%;
+  background-color: rgba(0,0,0,0.6);
+  color: rgba(255,255,255,0.9);
+  font-family: 'Raleway', sans-serif;
+  font-weight: 600;
+  border: 4px solid rgba(255,255,255, 0.6);
+  border-radius: 4px;
+  line-height: 24px;
+  letter-spacing: 1px;
+}
+
+.indeks{
+  border-bottom: 2px solid white;
+  padding: 0.2em 0;
+  width: 0.6em;
+  animation: indeks 0.7s infinite;
+}
+
+
+@keyframes indeks{
+  0%{
+    opacity:0;
+  }
+  100%{
+    opacity:1;
+  }
+}
+
+@media only screen and (max-width: 600) {
+
+}
+
 
 .nameP{
 	color: rgba(255,255,255,0.9);
@@ -42,6 +76,7 @@ body{
 
 
 /* - --------------------------------------------------------- - */
+
 html body [data-ca3_iconfont="ETmodules"]::before {
     font-family: "ETmodules";
 }
@@ -95,7 +130,6 @@ html body [data-ca3_iconfont="ETmodules"]::before {
   50%  { opacity: 1;  }
   100% { transform:translate(0,20px); opacity: 0; }
 }
-@import url(https://fonts.googleapis.com/css?family=Raleway:600);
 * {
   margin: 0;
   padding: 0;
