--- a/css/style.css
+++ b/css/style.css
@@ -4,17 +4,39 @@ html {
 
 body{
 	background-image: linear-gradient(to top right, #a8edea 0%, #fed6e3 100%);
+  overflow: hidden; /* Hide scrollbars */
 
 
 }
 
+
+#imageG{
+  background-image: url("../Picture/Imageportfolio1.png");
+  position: fixed;
+  background-repeat: no-repeat;
+  background-size:contain;
+  width:100%;
+  height:100%;
+  right: 100vw;
+}
+#imageD{
+  background-image: url("../Picture/Imageportfolio2.png");
+  position: fixed;
+  background-repeat: no-repeat;
+  background-size:contain;
+  width:100%;
+  height:100%;
+  left: 100vw;
+}
+
 #bgp{
- background-image: url('../Picture/Imageportfolio.jpg');
+ /*background-image: url('../Picture/Imageportfolio.jpg');*/
+  background-color: #202225;
  background-repeat: no-repeat;
  background-size:contain;
   font-family: 'Roboto', sans-serif;
   width:100%;
-  height:100vh;
+  height:100%;
   font-size:28px;
   display:flex;
   flex-direction: column;
@@ -24,9 +46,9 @@ body{
 .menuH1{
   position: absolute;
   padding: 2%;
-  background-color: rgba(0,0,0,0.6);
-  color: rgba(255,255,255,0.9);
   font-family: 'Raleway', sans-serif;
+  color: rgba(255,255,255,0.9);
+  background-color: rgba(0,0,0,0.6);
   font-weight: 600;
   border: 4px solid rgba(255,255,255, 0.6);
   border-radius: 4px
@@ -35,11 +57,9 @@ body{
   display:flex;
   flex-direction:row;
   padding: 2%;
-  background-color: rgba(0,0,0,0.6);
   color: rgba(255,255,255,0.9);
-  font-family: 'Raleway', sans-serif;
+  font-family: 'Annie Use Your Telescope', sans-serif;
   font-weight: 600;
-  border: 4px solid rgba(255,255,255, 0.6);
   border-radius: 4px;
   line-height: 24px;
   letter-spacing: 1px;
@@ -62,11 +82,6 @@ body{
   }
 }
 
-@media only screen and (max-width: 600) {
-
-}
-
-
 .nameP{
 	color: rgba(255,255,255,0.9);
 	font-family: 'Raleway', sans-serif;
@@ -74,6 +89,197 @@ body{
 	font-size: 50px;
 }
 
+.padbot{
+  padding-bottom: 20px;
+}
+
+
+/*--------------------------------------------*/
+.centerBox{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 600px
+}
+
+.categoryWrapper{
+  height: 410px;
+  width: 560px;
+  background: url("http://ohlookawebsite.com/bathroomtestfull.jpg") no-repeat center center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  position: relative;
+}
+
+.categoryWrapper:after{
+  position: absolute;
+  top:0;
+  left: 0;
+  right:0;
+  bottom: 0;
+  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#a29ca9+0,95909b+99 */
+  background: #a29ca9; /* Old browsers */
+  background: -moz-linear-gradient(-45deg, #a29ca9 0%, #95909b 99%); /* FF3.6-15 */
+  background: -webkit-linear-gradient(-45deg, #a29ca9 0%,#95909b 99%); /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(135deg, #a29ca9 0%,#95909b 99%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a29ca9', endColorstr='#95909b',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+  content: '';
+  opacity: 0;
+  -webkit-transition: opacity 0.9s ease 0s;
+}
+
+.categoryWrapper:hover:after{
+  opacity: 0.4;
+}
+
+.categoryWrapper h1{
+  color:white;
+  font-size: 50px;
+  letter-spacing: 2px;
+  -webkit-transition: all 0.15s ease 0s;
+  position: relative;
+  z-index: 10;
+}
+
+.categoryWrapper:hover h1{
+  transform: translateY(-10px);
+}
+
+.categoryWrapper button{
+  position: absolute;
+  transform: translatey(60px);
+  -webkit-appearance: none;
+  border: none;
+  background: none;
+  color:white;
+  width: 250px;
+  height:50px;
+  font-size: 20px;
+  padding: 0;
+  margin: 0;
+  outline: none;
+  z-index: 10;
+}
+
+.categoryWrapper button span{
+  display: block;
+  position: relative;
+  line-height: 50px;
+  height: 50px;
+  cursor: pointer;
+}
+
+.categoryWrapper button > span:after{
+  content:'';
+  position: absolute;
+  top:0;
+  left: 50%;
+  width: 20px;
+  height: 0;
+
+  border: 1px solid white;
+  border-left: none;
+  border-bottom: none;
+
+  transition: height 0.15s ease-out, width 0.15s ease-out 0.15s;
+}
+
+.categoryWrapper:hover button > span:after{
+  width: calc(50% - 1px);
+  height: calc(100% - 2px);
+  transition: width 0.15s ease-out, height 0.15s ease-out 0.15s;
+}
+
+.categoryWrapper button > span:before{
+  content:'';
+  position: absolute;
+  top:0;
+  right: 50%;
+  width: 20px;
+  height: 0;
+
+  border: 1px solid white;
+  border-right: none;
+  border-bottom: none;
+
+  transition: height 0.15s ease-out, width 0.15s ease-out 0.15s;
+}
+
+.categoryWrapper:hover button > span:before{
+  width: calc(50% - 1px);
+  height: calc(100% - 2px);
+  transition: width 0.15s ease-out, height 0.15s ease-out 0.15s;
+}
+
+.categoryWrapper button > span > span:before{
+  content:'';
+  position: absolute;
+  bottom:0;
+  right: 0%;
+  width: 1px;
+  height: 1px;
+  opacity: 0;
+
+}
+
+.categoryWrapper:hover button > span > span:before{
+  opacity: 1;
+  border-bottom: 1px solid white;
+  width: calc(50%);
+  height: 1px;
+  transition: opacity 0s ease-out 0.29s, width 0.15s ease-out 0.3s;
+}
+
+.categoryWrapper button > span > span:after{
+  content:'';
+  position: absolute;
+  bottom:0;
+  left: 0%;
+  width: 1px;
+  height: 1px;
+  opacity: 0;
+
+}
+
+.categoryWrapper:hover button > span > span:after{
+  opacity: 1;
+  border-bottom: 1px solid white;
+  width: calc(50%);
+  height: 1px;
+  transition: opacity 0s ease-out 0.29s, width 0.15s ease-out 0.3s;
+}
+
+.categoryWrapper button > span > span > span{
+  transition: color 0.15s ease-out 0.3s;
+  color: transparent;
+}
+
+.categoryWrapper:hover button > span > span > span{
+  color:white;
+}
+
+.categoryWrapper button > span > span > span:after{
+  position: absolute;
+  top:0;left:0;right:0;bottom:0;
+  color:#1f2e4d;
+  content: attr(data-attr-span);
+  width: 0%;
+  height: 100%;
+  background:white;
+  white-space: nowrap;
+  text-align: center;
+  margin: auto;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  transition: width 0.2s;
+}
+
+.categoryWrapper button:hover > span > span > span:after{
+  width: 100%;
+}
 
 /* - --------------------------------------------------------- - */
 
@@ -91,6 +297,7 @@ html body [data-ca3_iconfont="ETmodules"]::before {
   background-repeat: no-repeat;
 }
 .ca3-scroll-down-link {
+  display: none;
   cursor:pointer;
   height: 60px;
   width: 80px;
