--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ body{
   background-image: url("../Picture/Imageportfolio1.png");
   position: fixed;
   background-repeat: no-repeat;
-  background-size:contain;
+  background-size:100% 100%;;
   width:100%;
   height:100%;
   right: 100vw;
@@ -23,7 +23,7 @@ body{
   background-image: url("../Picture/Imageportfolio2.png");
   position: fixed;
   background-repeat: no-repeat;
-  background-size:contain;
+  background-size:100% 100%;;
   width:100%;
   height:100%;
   left: 100vw;
@@ -103,8 +103,8 @@ body{
 }
 
 .categoryWrapper{
-  height: 410px;
-  width: 560px;
+  height: 500px;
+  width: 800px;
   background: url("http://ohlookawebsite.com/bathroomtestfull.jpg") no-repeat center center;
   display: flex;
   justify-content: center;
@@ -158,6 +158,7 @@ body{
   height:50px;
   font-size: 20px;
   padding: 0;
+  padding-top: 25px;
   margin: 0;
   outline: none;
   z-index: 10;
@@ -341,8 +342,11 @@ html body [data-ca3_iconfont="ETmodules"]::before {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  scrollbar-width : none;
 }
-
+::-webkit-scrollbar{
+  width: 0;
+}
 
 .padtop {
   color: rgba(255,255,255,0.9);
