--- a/css/style.css
+++ b/css/style.css
@@ -66,7 +66,7 @@ body{
 }
 .intro2{
   padding-left: 10px;
-  color: rgba(255,255,255,0.9);
+  color: #00b0f4;
   font-family: 'Annie Use Your Telescope', sans-serif;
   font-weight: 600;
   border-radius: 4px;
