--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,19 @@
 html {
   background: #ececec;
+
 }
 
 body{
-	background-image: linear-gradient(to top right, #a8edea 0%, #fed6e3 100%);
+
   overflow: hidden; /* Hide scrollbars */
-
-
 }
-
+#selfpre{
+  background-image: url("../Picture/milkyway.jpeg");
+  background-repeat: no-repeat;
+  padding-top: 56px;
+  background-size:  100vw 100vh;
+  height: 100vh;
+}
 
 #imageG{
   background-image: url("../Picture/Imageportfolio1.png");
@@ -19,6 +24,7 @@ body{
   height:100%;
   right: 100vw;
 }
+
 #imageD{
   background-image: url("../Picture/Imageportfolio2.png");
   position: fixed;
@@ -45,13 +51,16 @@ body{
 }
 .menuH1{
   position: absolute;
-  padding: 2%;
+  padding: 1%;
   font-family: 'Raleway', sans-serif;
   color: rgba(255,255,255,0.9);
   background-color: rgba(0,0,0,0.6);
   font-weight: 600;
   border: 4px solid rgba(255,255,255, 0.6);
-  border-radius: 4px
+  border-radius: 4px;
+  margin-top: 200px;
+
+
 }
 .intro{
   display:flex;
@@ -74,6 +83,14 @@ body{
   letter-spacing: 1px;
 }
 
+.soustitre{
+  display:flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 0px;
+
+}
 .indeks{
   border-bottom: 2px solid white;
   padding: 0.2em 0;
@@ -154,6 +171,10 @@ body{
 
 .categoryWrapper:hover h1{
   transform: translateY(-10px);
+}
+
+.categoryWrapper:hover>.intro>.intro2{
+    color: #00a0d4;
 }
 
 .categoryWrapper button{
