--- a/css/style.css
+++ b/css/style.css
@@ -85,8 +85,9 @@ body{
   border: 4px solid rgba(255,255,255, 0.6);
   border-radius: 4px;
   margin-top: 200px;
-
-
+}
+.minInteret{
+  min-height: 300px;
 }
 .intro{
   display:flex;
