--- a/css/style.css
+++ b/css/style.css
@@ -16,11 +16,11 @@ body{
 }
 #bgpro{
   background-image: url("../Picture/project.webp");
-  background-repeat: no-repeat;
+  background-repeat: repeat;
 
 
   background-size:  100vw 100vh;
-  height: 125vh;
+  height: 200vh;
 }
 #imageG{
   background-image: url("../Picture/Imageportfolio1.png");
@@ -86,6 +86,10 @@ body{
 .grad{
   background-image: linear-gradient(rgba(0, 0, 0, 0.8),rgba(0,0,0,0.3),rgba(0, 0, 0, 0.9));
   height:100vh;
+}
+.grad2{
+  background-image: linear-gradient(rgba(0, 0, 0, 0.8),rgba(0,0,0,0.3),rgba(0, 0, 0, 1),rgba(0, 0, 0, 1),rgba(0,0,0,0.3),rgba(0, 0, 0, 0.9));
+  height:200vh;
 }
 .pfp{
   width: 40%;
