--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,6 @@ html {
 }
 
 body{
-
   overflow: hidden; /* Hide scrollbars */
 }
 #selfpre{
@@ -22,6 +21,7 @@ body{
   background-size:  100vw 100vh;
   height: 200vh;
 }
+
 #imageG{
   background-image: url("../Picture/Imageportfolio1.png");
   position: fixed;
@@ -44,7 +44,12 @@ body{
 #trans{
   height: 25vh;
 }
-
+#trans2{
+  height: 25vh;
+  width: 100%;
+  border: 4px solid rgba(255,255,255, 0.9);
+  background-image: url("../Picture/trans2bg.jpg");
+}
 #bgp{
  /*background-image: url('../Picture/Imageportfolio.jpg');*/
   background-color: #202225;
@@ -59,12 +64,17 @@ body{
   justify-content: center;
   align-items: center;
 }
+.footerContact{
+  height: 90vh;
+  background-color: rgba(0, 13, 51, 0.5);
+  background-image: url("../Picture/Contact.jpg");
+}
 .padup{
   padding-top: 20px;
 }
 .vid{
   height: 23vh;
-  width:  22vw;
+  width:  100%;
 }
 .nav-link{
  padding: 6px;
@@ -77,6 +87,7 @@ body{
   padding-top: 100px;
 }
 .cardcolor{
+  height: 100%;
   background-color: rgba(50, 50, 50,0.8);
   color: rgba(255,255,255,0.9);
 }
@@ -90,6 +101,10 @@ body{
 .grad2{
   background-image: linear-gradient(rgba(0, 0, 0, 0.8),rgba(0,0,0,0.3),rgba(0, 0, 0, 1),rgba(0, 0, 0, 1),rgba(0,0,0,0.3),rgba(0, 0, 0, 0.9));
   height:200vh;
+}
+.grad3{
+  background-image: linear-gradient(rgba(0, 0, 0, 0.95),rgba(0,0,0,0.3),rgba(0, 0, 0, 0.9));
+  height:100%;
 }
 .pfp{
   width: 40%;
@@ -440,4 +455,69 @@ html body [data-ca3_iconfont="ETmodules"]::before {
   font-weight: 600;
   text-transform: uppercase;
   padding-top: 5px;
+}
+
+/* TIMELINE
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+
+.timeline ul {
+  padding: 50px 0;
+  padding-top: 0px;
+}
+
+.timeline ul li {
+  list-style-type: none;
+  position: relative;
+  width: 6px;
+  margin: 0 auto;
+  padding-top: 50px;
+  background: #fff;
+}
+
+.timeline ul li::after {
+  content: '';
+  position: absolute;
+  left: 50%;
+  bottom: 0;
+  transform: translateX(-50%);
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  background: inherit;
+}
+
+.timeline ul li div {
+  position: relative;
+  bottom: 0;
+  width: 400px;
+  padding: 15px;
+  background-color: rgba(50, 50, 50,0.8);
+  color: rgba(255,255,255,0.9);
+}
+
+.timeline ul li div::before {
+  content: '';
+  position: absolute;
+  bottom: 7px;
+  width: 0;
+  height: 0;
+  border-style: solid;
+}
+
+.timeline ul li:nth-child(odd) div {
+  left: 45px;
+}
+
+
+
+.timeline ul li:nth-child(even) div {
+  left: -439px;
+}
+
+
+time {
+  display: block;
+  font-size: 1.2rem;
+  font-weight: bold;
+  margin-bottom: 8px;
 }
