--- a/portfolio/css/portfolio.css
+++ b/portfolio/css/portfolio.css
@@ -2,9 +2,17 @@
     padding: 1%;
     background-color: #2e2e2e;
     margin-bottom: 1%;
+    position: fixed;
+    width: 100%;
+    top: 0%;
+    z-index: 3;
 }
 #image-search{
     border-radius: 24px ;
+}
+
+.spacer{
+    padding-bottom: 5%;
 }
 
 #images{
@@ -65,6 +73,7 @@
     height: 100vh;
     margin: 0;
     position: fixed;
+    top: 0%;
     display: none;
     justify-content: center;
     align-items: center;
