--- a/portfolio/css/portfolio.css
+++ b/portfolio/css/portfolio.css
@@ -40,18 +40,49 @@
 }
 
 .card-img {
-    height: 12.5rem;
+    max-height: 12.5rem;
+    max-width: 100%;
+    height: auto;
     width: auto;
     padding: 0;
     display: block;
     margin-left: auto;
     margin-right: auto;
 }
+.card-image-spoiler{
+    filter: blur(15px);
+}
+
+.spoiler-radial-background{
+	width: 100%;
+	height: 12.5rem;
+	position: absolute;
+	z-index: 0;
+	left: 0;
+	top: 0;
+	background: radial-gradient(RGBA(46, 46, 46, 0.2),#2e2e2e);
+
+    text-align: center;
+    line-height: 12.5rem;
+    color: #fff;
+    font-weight: bold;
+    font-size: medium;
+}
 
 .overlay {
     background-color: rgba(0, 0, 0, 0.5);
     height: 20%;
     width: 100%;
+    padding: 0;
+}
+.margin0{
+    margin: 0;
+}
+.overflow0{
+    overflow: hidden;
+    display: table;
+    width:auto;
+    margin:auto;
     padding: 0;
 }
 
@@ -66,6 +97,10 @@
     margin: auto;
     padding: 0;
 }
+.carousel-image-spoiler{
+    filter: blur(50px);
+    background-color: #2e2e2e;
+}
 
 #carousel-drawings{
     background-color: rgba(0, 0, 0, 0.5);
@@ -79,7 +114,6 @@
     align-items: center;
     z-index: 10;
 }
-
 
 .carousel-control-next-icon, .carousel-control-prev-icon{
     width: 50px;
@@ -102,6 +136,33 @@
     background: 0 0;
     transition: opacity .15s ease;
 }
+
+.show-button{
+    position: absolute;
+    z-index: 2 ;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, 0) translateY(-50%);
+    margin-top: auto;
+    margin-bottom: auto;
+    padding-left: 2.5vw;
+    padding-right: 2.5vw;
+    padding-bottom: 2.5vh;
+    padding-top: 2.5vh;
+    opacity: 0.8;
+    background: 0 0;
+    
+    color: rgba(255, 255, 255, 0.8);
+    font-size: large;
+    font-weight: bold;
+    
+    border: solid;
+    border-width: 5px;
+    border-color: rgba(255, 255, 255, 0.8);
+    border-radius: 15px;
+    
+}
+
 /* Opacity on hover */
 .carousel-control-close:hover{
     opacity: 1;
